# liegroups-python

./: LICENSE  README.md  setup.cfg
liegroups/: __init__.py  base.py  se2.py  se2_test.py  se3.py  se3_test.py  so2.py  so2_test.py  so3.py  so3_test.py
src/liegroups/: __init__.py  algorithm.py  base.py  exceptions.py  se2.py  se2_test.py  se3.py  so2.py  so3.py  util.py
