[metadata]
name = liegroups-tcl326
version = 0.0.1
author = Ting-Che Lin
author_email = lintingche2012@gmail.com
description = A Micro Lie theory in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tcl326/liegroups-python
project_urls =
    Bug Tracker = https://github.com/tcl326/liegroups-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src